# timescales

./: .gitignore  README.md  pyproject.toml
pirnns/analysis/: load_models.py  plotting.py
pirnns/configs/: mts.yaml
pirnns/experiments/: single_timescales_sweep.yaml  std_sweep.yaml
pirnns/notebooks/: README.md
timescales/: README.md  callbacks.py  datamodule.py  logs  run_single_job.py  run_sweep.py  scores.py  single_run.py
timescales/analysis/: GRADIENT_TRACKING.md  README.md  TIME_LAG_ANALYSIS.md  analyses.py  connectivity.py  dynamics.py  load_models.py  measurements.py  spatial.py  sweep_evaluator.py  test_measurements.py
timescales/base_configs/: binary_counter.yaml  mts.yaml
timescales/configs/: mts.yaml  vanilla.yaml
timescales/datamodules/: __init__.py  binary_counter.py
timescales/experiments/: timescales_sweep.yaml
timescales/notebooks/: 01_analyze_vanilla_latents.ipynb  03_ood_traj_length.ipynb  05_speed_timescale_sweep.ipynb  06_behavioral_vs_neural_timescale_stds.ipynb  07_behav_vs_neural_timescale_means.ipynb  08_learnable_timescales.ipynb  09_learnable_init_sweep.ipynb  10_timescale_estimation_from_activations.ipynb  11_latent_dynamics_analysis.ipynb  12_normalization_comparison.ipynb  13_binary_counter_analysis.ipynb  14_activation_func.ipynb  15_shared_timescale_sweep.ipynb  16_timescale_distribution_sweep.ipynb  17_ablation_robustness.ipynb  analyze_vanilla.ipynb  fig_conectivity.ipynb  fig_learning_efficiency.ipynb  train_pirnn.ipynb
timescales/rnns/: multitimescale_rnn.py  rnn.py
tutorials/: 01_train_rnn_2D_path_integation.ipynb
(+14 files in other folders)
